app/css/components/about.css
@import '../common/typography';

.header {
  @apply --heading;
  padding-top: 30px;
  padding-bottom: 15px;
}

.subheader {
  @apply --subHeading;
  padding-bottom: 15px;
}

.paddingBottom {
  padding-bottom: 15px;
}

.content { @apply --small; }

ul.list {
  list-style-type: none;
  @apply --small;
}

.list-item { 
  padding-bottom: 5px;
}

.list-item::before { 
  content: "-  ";
}

